<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textSize="20dp" />

    <Switch
        android:id="@+id/SwitchStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swc1" />

    <TextView
        android:id="@+id/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt2"
        android:textSize="20dp"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/Rgroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <RadioButton
            android:id="@+id/RdoRolli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdo1" />

        <RadioButton
            android:id="@+id/RdoMash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdo2" />

        <RadioButton
            android:id="@+id/RdoNuga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdo3" />
    </RadioGroup>

    <ImageView
        android:id="@+id/ImgAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/BtnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/BtnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2" />

</LinearLayout>